--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Syne&display=swap');
+
 :root {
-	--foreground-color: #707070;
+	--foreground-color: teal;
+	--light-blue: #03a9f4;
+	--light-blue-50: #e1f5fe;
+	--light-blue-100: #b3e5fc;
+	--light-blue-200: #81d4fa;
+	--light-blue-300: #4fc3f7;
+	--light-blue-400: #29b6f6;
+	--light-blue-500: #03a9f4;
+	--light-blue-600: #039be5;
+	--light-blue-700: #0288d1;
+	--light-blue-800: #0277bd;
+	--light-blue-900: #01579b;
 }
 
 body {
@@ -13,7 +25,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-textarea {
+text {
 	font-family: 'Syne', sans-serif;
 	margin: 0;
 	padding: 0;
