--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,9 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+::placeholder {
+	color: teal;
+}
 
 text {
 	font-family: 'Syne', sans-serif;
