--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,6 @@ text {
 	background-color: rgb(0, 216, 216);
 	border-radius: 10px;
 }
+::-webkit-scrollbar-thumb:active {
+	background-color: rgb(0, 179, 179);
+}
