--- a/src/component/Logs.css
+++ b/src/component/Logs.css
@@ -5,6 +5,36 @@
 	margin-left: 10px;
 }
 .logs_body {
+	padding: 0 5px;
 	border: 1px solid teal;
 	border-radius: 5px;
+}
+
+.log {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	border-bottom: 1px solid teal;
+	margin: 10px 0;
+	padding-bottom: 10px;
+}
+
+.log_url {
+	margin: 0;
+	padding: 0;
+	display: block;
+	width: 100%;
+	word-wrap: break-word;
+	font-weight: bold;
+}
+.log_clear {
+	margin-bottom: 10px;
+	padding: 5px 10px;
+	background-color: white;
+	border: 1px solid teal;
+	border-radius: 5px;
+	cursor: pointer;
+}
+.log_clear:hover {
+	border-color: var(--light-blue-500);
 }
