--- a/src/component/Logs.css
+++ b/src/component/Logs.css
@@ -29,7 +29,9 @@
 	display: block;
 	width: 100%;
 	word-wrap: break-word;
-	font-weight: bold;
+}
+.log_timestamp {
+	color: var(--date-color);
 }
 .log_clear {
 	margin-bottom: 10px;
