--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 
 :root {
 	--foreground-color: teal;
+	--date-color: rgb(0, 170, 170);
 	--light-blue: #03a9f4;
 	--light-blue-50: #e1f5fe;
 	--light-blue-100: #b3e5fc;
