--- a/src/component/Logs.css
+++ b/src/component/Logs.css
@@ -20,7 +20,7 @@
 	border-bottom: 1px solid teal;
 	margin-bottom: 10px;
 	padding-bottom: 10px;
-	cursor: pointer;
+	cursor: default;
 	border-radius: 5px;
 }
 .log:hover {
