--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Syne&display=swap');
 
 :root {
+	--tooltip-background: #f5f5f9;
+	--tooltip-foreground: rgba(0, 0, 0, 0.87);
+	--tooltip-borders: #dadde9;
 	--foreground-color: teal;
 	--date-color: rgb(0, 170, 170);
 	--light-blue: #03a9f4;
