--- a/src/component/Logs.css
+++ b/src/component/Logs.css
@@ -8,6 +8,8 @@
 	padding: 10px 5px;
 	border: 1px solid teal;
 	border-radius: 5px;
+	max-height: 940px;
+	overflow: auto;
 }
 .logs_body h3 {
 	margin: 0;
