--- a/src/component/App.css
+++ b/src/component/App.css
@@ -42,6 +42,19 @@ h2 {
 	border: 1px solid teal;
 	border-bottom: none;
 	border-radius: 5px 5px 0 0;
+	position: relative;
+}
+.input_element label span {
+	position: absolute;
+	right: 6px;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	border: 1px solid teal;
+	height: 20px;
+	width: 20px;
+	border-radius: 50%;
+	text-align: center;
+	font-family: 'Arvo', serif;
 }
 .input_element textarea {
 	resize: none;
